spec/tests/error/error-1.1.tcl
# Test: basic error with message
error "something went wrong"
